--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -21,6 +21,7 @@
     "fastify": "^5.6.0",
     "fastify-static": "^4.7.0",
     "kafkajs": "^2.2.4",
+    "livekit-server-sdk": "^2.13.3",
     "openai": "^5.20.2",
     "pg": "^8.11.5",
     "socket.io": "^4.8.1",
